examples/typeError/typeErrorInPatternCon1.lcp
Nat = Data(X)< Zero () | Succ X >
NatList = Record(X){ .head : Nat | .tail : X }

f : Nat -> Nat
f (Succ (Succ ()))  = 1
